--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@wdio/sync": "^7.5.7"
   },
   "devDependencies": {
+    "@wdio/jasmine-framework": "^7.5.3",
     "@wdio/local-runner": "^7.5.7",
     "@wdio/mocha-framework": "^7.5.3",
     "@wdio/spec-reporter": "^7.5.7",
